# mailbox-node

./: .gitignore  README.md
esp32-lora-transmitter/: CMakeLists.txt  sdkconfig
esp32-lora-transmitter/components/sx127x/: CMakeLists.txt
esp32-lora-transmitter/components/sx127x/examples/common/esp_utils/: esp_utils.c  esp_utils.h
esp32-lora-transmitter/components/sx127x/src/: sx127x.c
esp32-lora-transmitter/main/: CMakeLists.txt  main.c
esp32-lora-transmitter/main/include/: motionSensor.h
esp32-lora-transmitter/main/src/: motionSensor.c
